axum-macros/tests/from_request/fail/generic.stderr
error: #[derive(FromRequest)] only supports generics on tuple structs that have exactly one field of the generic type
 --> tests/from_request/fail/generic.rs:4:21
  |
4 | struct Extractor<T>(Option<T>);
  |                     ^^^^^^^^^
